tests/expectations/compiler/finalize/get_incorrect_num_operands.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370021]: The type of `tokens` has no associated function `get` that takes 2 argument(s).
    --> compiler-test:18:9
     |
  18 |         tokens.get(true, true);
     |         ^^^^^^^^^^^^^^^^^^^^^^
Error [EPAR0370021]: The type of `amounts` has no associated function `get` that takes 0 argument(s).
    --> compiler-test:20:9
     |
  20 |         amounts.get();
     |         ^^^^^^^^^^^^^"""]
